<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
       >

        <ImageView
            android:id="@+id/dreamon_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logodreamon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_caption"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_customer_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_customer_name"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/edit_customer_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_customer_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_customer_telephone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_customer_telephone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/edit_customer_date"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/label_customer_date"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/edit_customer_location"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_customer_location"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/lbl_admin_comment" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_admin_comments"
                    style="@style/EditorFieldStyle"
                    android:gravity="top|left"
                    android:hint="@string/hint_admin_comment"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="1"
                    android:scrollbars="vertical" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>